kubernetes/myapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapi-deployment
spec:
  replicas: 1
  selector: 
    matchLabels: 
      component: myapi-microgateway
  template:
    metadata:
      labels: 
        component: myapi-microgateway
    spec:
      containers:
        - name: myapi-microgateway
          image: fjunior87/myapi-mgw:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
              protocol: "TCP"
