kubernetes/myapi-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapi-service
spec:
  type: LoadBalancer
  selector: 
    component: myapi-microgateway
  ports:
    - name: mgw-services-port
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: metrics-service
      port: 9797
      targetPort: 9797
      protocol: TCP
